tests/negative/runtime/float_modulo_by_zero/input.ci
void main() {
    float x = 5.0;
    x %= 0.0;
    print(toString(x) + "\n");
}
